// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SASS No Shims (doNotTrimOriginalFileExtension) styles.module.scss: files 1`] = `
Array [
  "styles.module.scss.css",
]
`;

exports[`SASS No Shims (doNotTrimOriginalFileExtension) styles.module.scss: styles.module.scss.css 1`] = `
"/**
 * Test SCSS module for verifying doNotTrimOriginalFileExtension output.
 * Expected output: styles.module.scss.css (not styles.module.css)
 */
.label {
  color: royalblue;
}

.container {
  padding: 16px;
}"
`;

exports[`SASS No Shims (doNotTrimOriginalFileExtension) stylesGlobal.global.scss: files 1`] = `
Array [
  "stylesGlobal.global.scss.css",
]
`;

exports[`SASS No Shims (doNotTrimOriginalFileExtension) stylesGlobal.global.scss: stylesGlobal.global.scss.css 1`] = `
"/**
 * Test non-module SCSS for verifying doNotTrimOriginalFileExtension output.
 * Expected output: stylesGlobal.global.scss.css (not stylesGlobal.global.css)
 */
.globalWrapper {
  font-size: 16px;
}"
`;
